force-app/main/default/objects/HP_EC_Payment_Setting__mdt/HP_EC_Payment_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HP EC Payment Setting</label>
    <pluralLabel>HP EC Payment Settings</pluralLabel>
</CustomObject>