force-app/main/default/objects/HP_EC_Payment_Setting__mdt/fields/Automatic_Response_Url__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Response_Url__c</fullName>
    <label>Automatic Response Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>