force-app/main/default/objects/HP_EC_Payment_Setting__mdt/fields/Customer_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Language__c</fullName>
    <label>Customer Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>