force-app/main/default/objects/HP_EC_Payment_Setting__mdt/fields/Interface_Version__c.field-meta.xml
<CustomField>
    <fullName>Interface_Version__c</fullName>
    <label>Interface Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>