force-app/main/default/objects/HP_EC_Payment_Setting__mdt/fields/Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Key_Version__c</fullName>
    <label>Key Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>