force-app/main/default/objects/HP_EC_Payment_Setting__mdt/fields/Normal_Return_Url__c.field-meta.xml
<CustomField>
    <fullName>Normal_Return_Url__c</fullName>
    <label>Normal Return Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>